components/Popups/popup.module.scss
@import "./../../styles/include-media.scss";
.SemiTransparentLayer {
  position: fixed;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  // background-color: rgba(0, 0, 0, 0.603);
  background-color: var(--transparent-layer);
  z-index: 100;
  overflow-y: scroll;
  overflow-x: hidden;
  display: flex;
  justify-content: center;
  align-items: center;
}
.popupContainer {
  background-color: var(--bg-c-1);
  width: 500px;
  height: 500px;
  border-radius: 1rem;
  display: flex;
  flex-direction: column;
  overflow: hidden;
  position: relative;
  @include media("<=tablet") {
    width: 100%;
    height: 100%;
    border-radius: 0;
  }
}

.alertMessage {
  color: #fff;
  background-color: rgba(26, 26, 26, 0.8);
  padding: 0.7rem 1rem;
  font-size: 1.4rem;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  border-radius: 0.6rem;
  pointer-events: none;
  z-index: 10;
  // transition-delay: 1s;
  transition: opacity 1s;
}
.popUpHeader {
  display: flex;
  justify-content: center;
  width: 100%;
  font-weight: 500;
  padding: 1.2rem 1rem;
  box-shadow: 0 0 0 0.02rem var(--txt-c-2);
  color: var(--txt-c-1);
  overflow: hidden;
}

.likesContainer {
  padding: 1rem;
  overflow-y: scroll;
  height: 100%;
  .likedUser {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    padding: 0.3rem 0;
  }
}

.ShareContainer {
  width: 100%;
  height: 100%;
  overflow: hidden;
  position: relative;
  display: flex;
  flex-direction: column;
  .friendListToSend {
    height: 100%;
    overflow-y: scroll;
    padding: 1rem;
    > div {
      padding: 0.5rem 0;
    }
  }
  .search {
    margin: 1rem;
    margin-top: 0;
    background-color: var(--bg-c-2);
    display: flex;
    align-items: center;
    border-radius: 0.8rem;
    padding-left: 1rem;
    input {
      width: 100%;
      color: var(--txt-c-1);
      background-color: transparent;
      outline: none;
      border: none;
      padding: 1.2rem;
    }
  }
  .writeSomething {
    width: 100%;
    display: flex;
    padding: 1rem;
    color: var(--txt-c-1);

    .minimizedPostPicContainer {
      img {
        border-radius: 0.6rem;
        height: 5rem;
      }
    }
    textarea {
      height: 5rem;
      font-family: inherit;
      color: inherit;
      background-color: transparent;
      font-size: 1.6rem;
      max-height: 20rem;
      border: none;
      outline: none;
      display: block;
      resize: none;
      flex: 1;
      padding: 1.5rem 1rem;
    }
  }
}

.followPopup {
  display: flex;
  flex-direction: column;
  height: 100%;
  overflow: hidden;
  height: 100%;
  .switch {
    display: flex;
    align-items: center;
    color: var(--txt-c-1);
    > div {
      width: 50%;
      text-align: center;
      padding: 1rem;
      font-weight: 500;
      border-bottom: solid 2px var(--txt-c-4);
      cursor: pointer;
    }
    .active {
      border-bottom-color: var(--txt-c-2);
      // border-bottom-color: red;
    }
  }
}
.followerCard {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 0.5rem 0;
}

.outsideX {
  position: absolute;
  top: 2rem;
  right: 2rem;
  cursor: pointer;
  path {
    stroke: #fff;
  }
}

.stepContainer {
  width: 83rem;
  height: 83rem;
  aspect-ratio: 1;
  position: relative;
  // max-width: 83rem;
  // max-height: 83rem;
  @include media("<=laptop") {
    background-color: red;
    width: 76rem;
    height: 76rem;
  }
  @include media("<tablet") {
    background-color: greenyellow;
    width: 100%;
    height: 100%;
  }
}

.importImgStep {
  // background-color: red;
  display: flex;
  justify-content: center;
  align-items: center;
  position: relative;
  .PicVidIcon {
    path {
      fill: var(--txt-c-1);
    }
  }
  .dragPhotosAndVideosParent {
    text-align: center;
    font-size: 2.2rem;
    font-weight: 300;
  }
}

.changeSvgColor {
  path {
    fill: var(--helper-primary) !important;
  }
}

.cropContainer {
  display: flex;
  align-items: center;
  justify-content: center;
  .cropArea {
    background-color: var(--bg-c-1);
    transition: 0.3s;
    overflow: hidden;
    display: flex;
    justify-content: center;
    align-items: center;
    cursor: grab;
    cursor: -webkit-grab;
    cursor: -moz-grab;
    &:active {
      cursor: grabbing;
      cursor: -webkit-grabbing;
      cursor: -moz-grabbing;
    }
    .imgToCrop {
      background-repeat: no-repeat;
      background-size: cover;
      width: 100%;
      height: 100%;
      background-position: center center;
    }
  }
  .oneToOne {
    width: 100%;
    height: 100%;
  }
  .fourToFive {
    width: calc(100% * 4 / 5);
    height: 100%;
  }
  .sixteenToNine {
    width: 100%;
    height: calc(100% * 9 / 16);
  }
  .original {
  }
  .grid {
    opacity: 0;
    position: absolute;
    pointer-events: none;
    width: 100%;
    height: 100%;
    border: 1px solid #ffffff7a;
    .line {
      position: absolute;
      width: 100%;
      height: 1px;
      background-color: #ffffff7a;
    }
    .horizontal {
      position: absolute;
      width: 1px;
      height: 100%;
      background-color: #ffffff7a;
    }
  }
}

.postStepsBody {
  @include media(">=tablet") {
    width: auto;
    height: auto;
  }
}

.iconPopup {
  position: absolute;
  bottom: 2rem;
  .iconContainer {
    &.active {
      > div {
        background-color: #fff;
        box-shadow: 1px 1px 10px#ddd;
        path {
          fill: #000;
        }
      }
    }
  }
}

.iconOpacity {
  opacity: 0.1;
}

.dropUp {
  position: absolute;
  background-color: rgba(26, 26, 26, 0.8);
  bottom: 5rem;
  left: 0;
  border-radius: 0.7rem;
}
.dropUpIElmContainer {
  list-style-type: none;
  width: 12rem;
  li {
    padding: 1.2rem;
    padding-left: 1.5rem;
    border-bottom: solid rgb(142, 142, 142) 1px;
    color: rgb(142, 142, 142);
    font-weight: 600;
    letter-spacing: 1px;
    font-size: 1.4rem;
    cursor: pointer;
    display: flex;
    align-items: center;
    &:last-child {
      border-bottom: none;
    }
    > div {
      margin-right: 0.5rem;
    }
    &.active {
      color: #fff;
      path {
        stroke: #fff;
      }
    }
  }
}

.nextPrevStepHeader {
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0 1rem;
  // background-color: red;
  .crossX {
    background-color: red;
    @include media(">=tablet") {
      // display: none !important;
      visibility: hidden;
      pointer-events: none;
    }
  }
  .unvisible {
    visibility: hidden;
    pointer-events: none;
  }
  .leftArrow {
    path {
      fill: var(--txt-c-1);
    }
  }
}

.smallPopupContainer {
  position: fixed;
  display: flex;
  align-items: center;
  justify-content: center;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  background-color: var(--transparent-layer);
  z-index: 500;
}

.smallPopup {
  // background-color: #ffffff;
  background-color: var(--sm-popup-bg);
  text-align: center;
  border-radius: 1rem;
  width: 100%;
  max-width: 40rem;
  margin: 1rem;
  li {
    color: var(--txt-c-1);
    list-style: none;
    cursor: pointer;
    padding: 1.5rem;
    border-top: 1px solid var(--txt-c-4);
    font-size: 1.4rem;
    &:nth-child(1) {
      border-top: none;
    }
  }
  .titleOrPic {
    font-size: 1.8rem;
    padding-bottom: 2rem;
    font-weight: bold;
    display: flex;
    justify-content: center;
    align-items: center;
  }
  p {
    font-size: 1.3rem;
    color: var(--txt-c-2);
  }
  .danger {
    color: var(--helper-danger);
    font-weight: 600;
  }
}

